2009-11-27  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.h (idx_vector::index_class): New member: class_mask.
	(idx_vector::idx_mask_rep): New class.
	(idx_vector::idx_vector (bool)): Construct idx_mask_rep.
	(idx_vector::unmask): New method decl.
	* idx-vector.cc (idx_vector::idx_vector (const boolNDArray&)):
	Construct idx_mask_rep conditionally.
	(idx_vector::unmask): New method.
	(idx_vector::unconvert): Make non-const. unmask when called on a mask
	vector.
	(idx_vector::is_cont_range): Check also for idx_mask_rep.

2009-11-27  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::nnz): New method.
	* Array.h: Declare it.
	* MArray.h (MArray<T>::nnz): Remove.
	* MArrayN.h (MArrayN<T>::nnz): Remove.
	* boolNDArray.h (boolNDArray::nnz): Remove.

2009-11-25  Jaroslav Hajek  <highegg@gmail.com>

	* dbleCHOL.cc (CHOL::init): Output LAPACK's info. Resize matrix if
	nonzero. Use smarter copying.
	* floatCHOL.cc (FloatCHOL::init): Ditto.
	* CmplxCHOL.cc (ComplexCHOL::init): Ditto.
	* fCmplxCHOL.cc (FloatComplexCHOL::init): Ditto.

2009-11-24  Jaroslav Hajek  <highegg@gmail.com>

	* MArrayN.cc (MArrayN::idx_add): New methods.
	* MArrayN.h: Declare them.
	* MArray.cc, MArray.h: Remove from here.

2009-11-19  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.h (dim_vector::safe_numel): New method.
	* Array.h (Array<T>::Array (const dim_vector&),
	Array<T>::Array (const dim_vector&, const T&),
	Array<T>::Array (T *, const dim_vector&)): Use it here.
	* Array.cc (Array<T>::clear (const dim_vector&)): Also here.
	(Array<T>::get_size): Remove.
	* Array2.h (Array2::get_size): Remove.
	* Array3.h (Array3::get_size): Remove.

2009-11-19  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array::clear (const dim_vector&)): Use get_size.

2009-11-19  Jaroslav Hajek  <highegg@gmail.com>

	* lo-mappers.cc (do_erfinv): New static function.
	(erfinv (double), erfinv (float)): New mappers.
	* lo-mappers.h: Declare them.

2009-11-18  David Grundberg  <davidg@cs.umu.se>
